# mycmake

exe/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  main.cpp  mylib.h
